# GitTogether

./: .gitignore  Cargo.toml  README.md  README.md.tpl  action.yml  package-lock.json
.devcontainer/: devcontainer.json
.github/workflows/: activity-action.yml  release.yml
api/: handler.rs
src/: activity.rs  api.rs  card.rs  get_contributor_stats.rs  lib.rs  main.rs  period.rs  query.graphql  renderer.rs  schema.docs.graphql  template.rs
src/styles/: compact.rs  full.rs  mod.rs
