[package]
name = "activity-action"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
build_html = "2.4.0"
octocrab = "0.33.1"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
chrono = "0.4.32"
graphql_client = { version = "0.13.0", features = ["reqwest-blocking"]}
svg = "0.14.0"