[package]
name = "activity-action"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
build_html = "2.4.0"
octocrab = "0.33.1"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
chrono = "0.4.32"
graphql_client = { version = "0.13.0", features = ["reqwest-blocking"]}
svg = "0.14.0"
clap = { version = "4.1.4", features = ["derive"] }
eyre = "0.6.8"
color-eyre = "0.6.2"
usvg-text-layout = "0.29.0"
usvg = "0.29.0"
resvg = "0.29.0"
tiny-skia = "0.8.3"
log = "0.4.20"
simple_logger = "4.2.0"