[package]
name = "gittogether"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
build_html = "2.4.0"
octocrab = "0.38.0"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
chrono = "0.4.32"
graphql_client = { version = "0.14.0", features = ["reqwest-blocking"]}
svg = "0.17.0"
reqwest = { version = "0.12.4", default-features=false, features=["rustls-tls"]}
base64 = "0.22.0"
urlencoding = "2.1.3"
vercel_runtime = { version = "1.1.0" }
clap = { version = "4.4.18", features = ["derive"] }
identicon-rs = "5.0.0"
anyhow = "1.0.99"

[[bin]]
name = "handler"
path = "api/handler.rs"
